<resources>
    <string name="app_name" translatable="false">Lanting</string>
    <string name="lets_start">let\'s start it.</string>
    <string name="join_us">Join us to reduce the number of "stunting" sufferers in Indonesia.</string>
    <string name="get_started">Get Started</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="food_allergy">Food Allergy</string>
    <string name="next">Next</string>
    <string name="create">Create</string>
    <string name="profile">Profile</string>
    <string name="new_profile">New Profile</string>
    <string name="choose_your_role">Choose your role.</string>
    <string name="baduta" translatable="false">Baduta</string>
    <string name="ibu" translatable="false">Ibu</string>
    <string name="busui" translatable="false">Busui</string>
    <string name="bumil" translatable="false">Bumil</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="field_error">You have to fill this field</string>
    <string name="choose_photo">Choose</string>
    <string name="choose_photo_camera">Take photo</string>
    <string name="choose_photo_gallery">Choose from gallery</string>
    <string name="menu_change_profile">Change profile</string>
    <string name="menu_help">Help</string>
    <string name="menu_language">Language</string>
    <string name="hello_user">Hello, %s</string>
    <string name="did_you_know">Do you know about “stunting” case in Indonesia?</string>
    <string name="learn_more">learn more</string>
    <string name="tab_recipe_text_1">By Budget</string>
    <string name="tab_recipe_text_2">By Recommended</string>
    <string name="recipe_budget_text">You will get some recipe by input your budget for get some combination recipe</string>
    <string name="_30000" translatable="false">30000</string>
    <string name="recipe_recommended_text">a collection of recipes that we recommend. swipe up for more</string>
    <string name="task_text">Let\'s capture your food to control your daily nutrition!</string>
    <string name="article_text">Article about stunting that you should know. Want to see the article?</string>
    <string name="today">Today</string>
    <string name="gestational_age">Gestational age by month</string>
    <string name="baby_birth_date">Baby\'s birth date</string>
    <string name="total">Total</string>
    <string name="goal">Goal</string>
    <string name="left">Left</string>
    <string name="energy">Energy</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="_0" translatable="false">0</string>
    <string name="nutrition_unit_g" translatable="false">%sg</string>
    <string name="nutrition_unit_cal">%scal</string>
    <string name="add">Add</string>
    <string name="add_image_failed">Failed, please check your internet</string>
    <string name="add_image_failed_no_food">Sorry, we can\'t detect your food</string>
    <string name="ingredient">Ingredient</string>
    <string name="how_to_cook">How to cook</string>
    <string name="seasoning">Seasoning</string>
    <string name="nutrition">Nutrition</string>
    <string name="estimated_price">Estimated price - Rp%d</string>
    <string name="our_feature">our feature</string>
    <string name="recipe">Recipe</string>
    <string name="recipe_help_text">This feature will help you to get recipe, it can filter by budget or you can use recipe by our recommendation</string>
    <string name="article">Article</string>
    <string name="article_help_text">This feature will help you to get know about “stunting” and nutrients for you and babies</string>
    <string name="task">Task</string>
    <string name="task_help_text">This feature will help you to get enough nutrients for you and the babies so you’ll be healthy and not undernourished</string>
    <string name="about_us">About us</string>
</resources>