<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".ui.profilenew.ProfileNewActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@color/green_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_profile_form"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingTop="64dp"
            android:paddingBottom="12dp"
            app:layout_constraintTop_toBottomOf="@id/btn_change_profile_photo">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_profile_form_edt"
                android:inputType="textNoSuggestions"
                android:textColor="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_of_birth"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_profile_form_edt"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="date"
                android:textColor="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_profile_form_edt"
                android:inputType="number"
                android:textColor="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_profile_form_edt"
                android:inputType="number"
                android:textColor="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/food_allergy"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_allergy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:background="@drawable/bg_profile_form_edt"
                android:inputType="text"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginVertical="12dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_delete"
                    style="@style/Theme.Lanting.Button"
                    android:layout_width="wrap_content"
                    android:visibility="gone"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:text="@string/delete" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_create"
                    style="@style/Theme.Lanting.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create" />

            </LinearLayout>

        </LinearLayout>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="64dp"
            android:src="@drawable/ic_person_with_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_change_profile_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="76dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_btn_circle"
            android:src="@drawable/ic_camera_add"
            app:layout_constraintStart_toStartOf="@id/civ_profile"
            app:layout_constraintTop_toTopOf="@id/civ_profile" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
